pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flask-pod
  labels:
    app: flask-app
spec:
  containers:
  - name: flask-container
    image: merabi14/mk-portfolio:latest
    imagePullPolicy: Always
    ports:
    - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
  - protocol: TCP
    port: 5000 
    targetPort: 5000 
    nodePort: 30000
